<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#1A74FB"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.Items">

    <LinearLayout
        android:gravity="center"
        android:background="#8AB5C8"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="50dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_delivery_request"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginVertical="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvLocation"
                android:hint="@string/enter_location"
                android:drawableStart="@drawable/ic_baseline_add_location_24"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginVertical="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvDestination"
                android:hint="@string/enter_destination"
                android:drawableStart="@drawable/ic_baseline_place_24"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginVertical="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvItem"
                android:hint="@string/enter_item"
                android:drawableStart="@drawable/ic_baseline_backpack_24"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginVertical="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/tvAmount"
                android:layout_height="wrap_content"
                android:hint="@string/enter_item_amount_quantity"
                android:drawableStart="@drawable/ic_baseline_backpack_24"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="110dp"
                android:id="@+id/btnRequest"
                android:layout_height="50dp"
                android:text="@string/request"
                android:backgroundTint="#26E171"
                />

            <Button
                android:layout_marginStart="2dp"
                android:id="@+id/btnCancel"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:text="@string/cancel"
                android:backgroundTint="#26E171"/>

        </LinearLayout>







    </LinearLayout>

</LinearLayout>