<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#1A74FB"
    android:layout_height="match_parent"
    tools:context=".ui.Register">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginVertical="10dp"
        android:src="@drawable/register"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_marginVertical="10dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etUser"
            android:hint="@string/username"
            android:maxLength="20"
            android:drawableStart="@drawable/ic_baseline_person_24"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edEmail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="40"
            android:drawableStart="@drawable/ic_baseline_email_24"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etPhone"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="14"
            android:drawableStart="@drawable/ic_baseline_phone_24"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edPass"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_baseline_security_24"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_marginVertical="20dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:backgroundTint="#26E171"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegister"
            android:text="@string/register"/>

        <Button
            android:backgroundTint="#26E171"
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

    </LinearLayout>

</LinearLayout>